--- a/style.css
+++ b/style.css
@@ -561,9 +561,9 @@ img {
     width: 90%;
     max-width: 500px;
     padding: 2rem;
-    margin-top: -10rem;
+    /* margin-top: -10rem; */
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
